fixed font-size issues on mobile

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -48,3 +48,16 @@ p{
   height: auto;
   max-width: 100%;
 }
+
+@media only screen and (max-width: 768px) {
+  #homepage-main-greet{
+    h1{
+      font-size: 50px;
+    }
+
+    p{
+      font-size: 20px;
+    }
+
+  }
+}
